<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/color_background_1"
    android:backgroundTint="#FFFFFF"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@android:color/white"
        tools:layout_editor_absoluteX="-16dp">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/back_button_IL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:tooltipText="@string/comming_soon"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="18dp"></androidx.appcompat.widget.AppCompatImageButton>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:text="IL"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"

            ></com.google.android.material.textview.MaterialTextView>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar">

        <LinearLayout
            android:id="@+id/card_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/lastcard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_card">

                <!--                <androidx.constraintlayout.widget.ConstraintLayout-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="match_parent">-->

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/header2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/max_rand"
                        android:textSize="14sp" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/header2">

                        <SeekBar
                            android:id="@+id/seekBar"
                            android:layout_width="260dp"
                            android:layout_height="49dp"
                            android:backgroundTint="@color/colorPrimary"
                            android:max="60"
                            android:min="1"
                            android:progress="15"
                            android:progressTint="@color/colorPrimary"
                            android:thumbTint="@color/colorPrimary"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/textseeckbar"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textseeckbar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="15"
                            android:textSize="24sp"
                            app:layout_constraintBottom_toBottomOf="@+id/seekBar"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/seekBar"
                            app:layout_constraintTop_toTopOf="@+id/seekBar" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <!--                </androidx.constraintlayout.widget.ConstraintLayout>-->
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <TextView
            android:id="@+id/text_view"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/init_message"
            android:textColor="#000000"
            android:textSize="15sp" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_timer"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:backgroundTint="#9168FF"
            app:fabCustomSize="75dp"
            app:srcCompat="@drawable/ic_baseline_timer_24" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#CDB5F6"

            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:paddingBottom="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/button_start"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:gravity="center"
                    android:scaleType="center"
                    app:backgroundTint="#9168FF"
                    app:fabCustomSize="60dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button_stop"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_check" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/button_stop"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:gravity="center"
                    android:scaleType="center"
                    app:backgroundTint="#9168FF"
                    app:fabCustomSize="60dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/button_start"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_close_24" />

                <TextView
                    android:id="@+id/text_view4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="@string/No"
                    android:textColor="#FF0000"
                    android:textSize="20sp"
                    android:textStyle="bold"

                    app:layout_constraintBottom_toTopOf="@+id/button_stop"
                    app:layout_constraintEnd_toEndOf="@+id/button_stop"
                    app:layout_constraintStart_toStartOf="@+id/button_stop" />

                <TextView
                    android:id="@+id/text_view3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/yes"
                    android:textColor="#00A306"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/text_view4"
                    app:layout_constraintEnd_toEndOf="@+id/button_start"
                    app:layout_constraintStart_toStartOf="@+id/button_start" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/text_view2"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/Question"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="6dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>